[CSS] Fixes issue with dropdown menus hiding behind modal boxes

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -396,3 +396,7 @@ div#station_logbooks_linked_table_paginate {
 .api-key {
    font-family: Monospace;
 }
+
+.dropdown-menu {
+    z-index: 2000;
+}
